--- a/src/app/components/admin/detail-goal-admin/detail-goal-admin.component.scss
+++ b/src/app/components/admin/detail-goal-admin/detail-goal-admin.component.scss
@@ -12,3 +12,17 @@
 .desktop-card {
     height: 100% !important;
 }
+
+.goals-number {
+    margin-left: 10%;
+}
+
+.chips-detail {
+    font-size: 1.3em;
+}
+
+.icon-chip-detail {
+    border-radius: 50%;
+    background-color: black;
+    color: white;
+}
