--- a/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
+++ b/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header> -->
 <ion-header>
-  <app-menu-general [buttonNotification]=true [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Créditos y Eventos'"
+  <app-menu-general [buttonNotification]="'notifications'" [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Créditos y Eventos'"
     [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
