--- a/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
+++ b/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header> -->
 <ion-header>
-  <app-menu-general [buttonNotification]=true [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Eventos'"
+  <app-menu-general [buttonNotification]="'notifications'" [isMenuButton]="'back'" [colorMenuButton]="'white'" [titleMenu]="'Eventos'"
     [buttonUser]="'person'"></app-menu-general>
 </ion-header>
 <ion-content padding>
