--- a/src/app/components/buyer/ofert-buyer/ofert-buyer.component.html
+++ b/src/app/components/buyer/ofert-buyer/ofert-buyer.component.html
@@ -10,7 +10,7 @@
 </ion-header> -->
 <ion-header>
   <app-menu-general [isMenuButton]="'menu'" [colorMenuButton]="'white'" [titleMenu]="'Ofertas'" [buttonUser]="'person'"
-    [buttonNotification]=true></app-menu-general>
+    [buttonNotification]="'notifications'"></app-menu-general>
 </ion-header>
 <ion-content padding>
   <!-- cargar -->
