--- a/src/app/components/general/general-table/general-table.component.html
+++ b/src/app/components/general/general-table/general-table.component.html
@@ -167,6 +167,8 @@
 </ng-template>
 <!-- Celular lista -->
 <ng-template #Device>
+  <!-- Default Searchbar -->
+  <ion-searchbar (ionClear)="serach(undefined)" (keyup)="serach(Search.value)" placeholder="Buscar..." #Search animated></ion-searchbar>
   <ion-list>
     <ion-item lines="inset" *ngFor="let row of dataSource.data">
       <ion-icon *ngIf="isIcon" style="color: #F5811E" [name]="row.iconName" slot="start"></ion-icon>
