--- a/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
+++ b/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
@@ -194,3 +194,13 @@
   </ion-grid>
 
 </ion-content>
+<!-- Solo vendedor y asesor -->
+<ion-footer *ngIf="(user.type === 'adviser' || user.type === 'seller') && sales">
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="sendToTotalSales()" fill="solid" color="secondary">
+        Ventas<ion-badge color="dark" style=" margin-left: 2%;">{{sales.length}}</ion-badge>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
