--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,12 @@
         </ion-toolbar>
       </ion-header>
       <ion-content>
-        <ion-list>
+        <ion-list mode='md' lines="none">
           <ion-menu-toggle auto-hide="false">
             <span *ngFor="let p of appPages">
-              <ion-item [ngClass]="{'background-item-menu':link === p.url }" (click)="link = p.url " [routerDirection]="'root'"
-                [routerLink]="[p.url]" *ngIf="user && (user.type === p.userType || p.userType === 'all') ">
-                <ion-icon slot="start" [name]="p.icon"></ion-icon>
+              <ion-item lines="none" mode='md' [ngClass]="{'background-item-menu':link === p.url }" (click)="link = p.url "
+                [routerDirection]="'root'" [routerLink]="[p.url]" *ngIf="user && (user.type === p.userType || p.userType === 'all') ">
+                <ion-icon slot="start" [name]="p.icon" mode='md'></ion-icon>
                 <ion-label>
                   {{p.title}}
                 </ion-label>
